change title and remove numInput.val() in reset(), because it makes numInput empty everytime. Did not notice this bug before

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@500&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
-        <title>Document</title>
+        <title>Score Keeper</title>
     </head>
 
     <body>
